# rules_buildx

./: .bazelignore  .bazelrc  .gitignore  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: buildifier.yaml  ci.yaml  publish.yaml  release.yaml  tag.yaml
buildx/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl
buildx/private/: BUILD.bazel  buildx_build.bzl  buildx_context.bzl  toolchains_repo.bzl  versions.bzl
buildx/tests/: versions_test.bzl
docs/: rules.md
e2e/smoke/: BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE.bazel  curl.Dockerfile  jq.Dockerfile  motd.Dockerfile
examples/rules_img/: BUILD.bazel  MODULE.bazel  README.md
examples/toolchain/: BUILD.bazel  Dockerfile  MODULE.bazel  README.md  say.py
examples/transitions/: BUILD.bazel  Dockerfile  MODULE.bazel  README.md
