load("@aspect_rules_buildx//buildx:defs.bzl", "buildx", "context")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")

buildx(
    name = "base_image",
    build_context = [
        # replaces FROM python:3.11.9-bullseye with @ubuntu from oci_pull
        context.oci_layout(
            "python:3.11.9-bullseye",
            "@python_3_11_9-bullseye",
        ),
        # make lib1 available as COPY --from=lib1 in the dockerfile
        context.sources(
            "lib1",
            ["//libs/lib1:lib1"],
            override_path = "libs/lib1",
        ),
        context.sources(
            "bins_hi",
            ["//bins/hi:hi"],
            override_path = "$(BINDIR)/bins/hi",
        ),
        context.sources(
            "root",
            glob(["src/*"]),
            override_path = "src",
        ),
    ],
    dockerfile = ":Dockerfile",
)

oci_image(
    name = "image",
    base = ":base_image",
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["example:latest"],
)

# BuildX can be used to generate files, not just OCI images.
# Here we use `apt-get` to install `jq` and then copy it out of the image.
buildx(
    name = "jq_buildx",
    outs = ["jq"],
    dockerfile = ":jq.Dockerfile",
    output_type = "local",
)

# BuildX can accept a list of platforms as an argument.
# Here we build the same Dockerfile for two different platforms.
buildx(
    name = "curl_buildx_linux_amd64",
    dockerfile = ":curl.Dockerfile",
    platforms = ["linux/arm64"],
)

buildx(
    name = "curl_buildx_linux_arm64",
    dockerfile = ":curl.Dockerfile",
    platforms = ["linux/arm64"],
)

oci_load(
    name = "curl_load",
    image = ":curl_buildx_linux_amd64",
    repo_tags = ["bazel/rules_buildx_curl:latest"],
)

build_test(
    name = "test",
    targets = [
        ":image",
        ":jq_buildx",
        ":curl_buildx_linux_amd64",
        ":curl_buildx_linux_arm64",
    ],
)
